Fix overflow bug on ShoppingPage

--- a/src/styles/productCard.css
+++ b/src/styles/productCard.css
@@ -57,9 +57,14 @@
         margin: 0 20px;
         text-align: center;
     }
+
+    .productCardImage {
+        max-width: 90%;
+    }
     
     .productCard {
         margin-bottom: 0px;
         margin-top: 10px;
+        margin: 10px 0 0 0;
     }
 }
